# urxion

./: .gitignore  README.md  agent_resources.py  blog_generator.py  code_copy.py  flask_app.py  miniblogpost.py  miniblogpost1.py  miniblogpostredo.py  pyproject.toml  requirements.txt  rfp_opportunity_cache.py  robots.txt  scrub_all.py  scrub_keys.py  sitemap.xml
.github/workflows/: ci.yml
archive/apps/: flask_app11.py  flask_appSept6old.py
archive/templates/: 2Sales Assessment.html  Business Assessment1.html  Cold Calling That Converts1.html  Cold Calling That Converts11.html  Cold Calling That Converts2.html  demo1.html  (+5 more)
articles/: Sales EQ  rfp_opportunities_seed.json  site_wording_export.md
demo_runs/: rfp_opportunities.json
docs/: maintenance-scripts.md
scripts/: export_site_wording.py  refresh_rfp_opportunities.py  wrap_templates.py
templates/: 404.html  Break even point.html  Business Assessment.html  Business Assessment_works.html  Cold Calling Assessment.html  Cold Calling That Converts.html  DispatchAI.html  Knowledge is Power.html  LastCall.html  Sales Assessment.html  Sales Assessment1.html  base.html  blog-ultimate-guide.html  compliance.html  contact.html  custom-agents.html  data-security.html  demo-vs-production.html  demo.html  demo1.html  demo11.html  demo111.html  error.html  footer.html  header.html  header1.html  index.html  index1.html  philosophy.html  privacy.html  privacy1.html  results.html  rfp.html  sample-outputs.html  sdr.html  services.html  services12.html  step_1.html  step_2.html  step_3.html  (+16 more)
tests/: test_routes.py
(+264 files in other folders)
